--- a/src/main/resources/application-demo.yml
+++ b/src/main/resources/application-demo.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/osu?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
-    username: root
-    password: 123456
-    #    url: jdbc:mysql://106.14.180.98:3306/dxs_youxiu?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
-    #    username: nbopendemon
-    #    password: nbopenlvb
+#    url: jdbc:mysql://127.0.0.1:3306/osu?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
+#    username: root
+#    password: 123456
+    url: jdbc:mysql://47.100.100.145:3306/osu?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=Asia/Shanghai
+    username: osu
+    password: csss888.
 config:
-    localhost:  https://youxiu.cnyto.me/
+    localhost:  https://www.yaoxi.shop/
     fileServer: https://static.cnyto.me
     uploadServer: http://172.19.142.166:8080/Upload
     extraUserOrderdetail: msg.user.orderdetail
